--- a/hobby.html
+++ b/hobby.html
@@ -12,13 +12,7 @@
         <li>Grafica e design</a></li>
         <li>Informatica</a></li>
         <li>Videogiochi</li>
-        <li>Gal Gadot</li>
-        <ul style="list-style-type: disc;">
-            <li>3</li>
-            <li>2</li>
-            <li>1</li>
-            <li>Via!</li>
-        </ul>
+        <li><a href="https://c.tenor.com/afzAptsmU-gAAAAC/gal-gadot-wonder-woman.gif">Gal Gadot</a></li>
     </ol>
 </body>
 </html>
